--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,13 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:orientation="vertical"
-    android:background="#f4f4f4" >
+    android:background="#f4f4f4"
+    android:orientation="vertical">
 
     <ExpandableListView
         android:id="@+id/listFoods"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="519dp" />
+
+    <Button
+        android:id="@+id/button_pesanan"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="#4CAF50"
+        android:text="CHECKOUT"
+        android:textColor="#F8F8F8" />
+
+
 </LinearLayout>
