--- a/app/src/main/res/layout/layout_seller.xml
+++ b/app/src/main/res/layout/layout_seller.xml
@@ -4,14 +4,14 @@
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="55dp"
-        android:background="#8f8f8f8f">
+        android:background="#4CAF50">
         <TextView
             android:id="@+id/lblListHeader"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingLeft="?android:attr/expandableListPreferredChildPaddingLeft"
             android:textSize="17dp"
-            android:textColor="#f9f93d"
+            android:textColor="#ededed"
             />
 
 
