modul 9 tutam tugas 4

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -13,8 +13,10 @@
         android:layout_marginBottom="140dp"
         android:width="300dp"
         android:ems="10"
+        android:fontFamily="sans-serif"
         android:hint="password"
         android:inputType="textPassword"
+        android:textColor="#3D703F"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -27,8 +29,10 @@
         android:layout_marginBottom="250dp"
         android:width="300dp"
         android:ems="10"
+        android:fontFamily="sans-serif"
         android:hint="e-mail"
         android:inputType="textEmailAddress"
+        android:textColor="#3D703F"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -39,7 +43,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:width="300dp"
-        android:backgroundTint="#666875"
+        android:backgroundTint="#3D703F"
+        android:fontFamily="sans-serif"
         android:text="Login"
         android:textColor="#FFECEC"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -59,4 +64,36 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.56" />
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="106dp"
+        android:layout_height="46dp"
+        android:fontFamily="sans-serif-medium"
+        android:text="FOOD"
+        android:textColor="#66BB6A"
+        android:textSize="40sp"
+        app:layout_constraintBottom_toTopOf="@+id/inputEmaIl"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.534"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.79" />
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="33dp"
+        android:layout_height="46dp"
+        android:background="#66BB6A"
+        android:fontFamily="sans-serif-light"
+        android:text="J"
+        android:textAlignment="viewEnd"
+        android:textColor="#F4F4F4"
+        android:textSize="40sp"
+        app:layout_constraintBottom_toTopOf="@+id/inputEmaIl"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.322"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.79" />
 </androidx.constraintlayout.widget.ConstraintLayout>
