--- a/app/src/main/res/layout/activity_buat_pesanan.xml
+++ b/app/src/main/res/layout/activity_buat_pesanan.xml
@@ -224,13 +224,15 @@
         android:id="@+id/hitung"
         android:layout_width="263dp"
         android:layout_height="46dp"
+        android:background="#FFFFFF"
         android:text="COUNT"
+        android:textColor="#66BB6A"
         android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/static_total_price"
-        app:layout_constraintVertical_bias="0.175" />
+        app:layout_constraintVertical_bias="0.237" />
 
     <Button
         android:id="@+id/pesan"
