--- a/app/src/main/res/layout/layout_seller.xml
+++ b/app/src/main/res/layout/layout_seller.xml
@@ -1,18 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:orientation="vertical"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="55dp"
+    android:background="#3D703F"
+    android:orientation="vertical">
+
+    <TextView
+        android:id="@+id/lblListHeader"
         android:layout_width="match_parent"
-        android:layout_height="55dp"
-        android:background="#4CAF50">
-        <TextView
-            android:id="@+id/lblListHeader"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingLeft="?android:attr/expandableListPreferredChildPaddingLeft"
-            android:textSize="17dp"
-            android:textColor="#ededed"
-            />
+        android:layout_height="34dp"
+        android:fontFamily="sans-serif-light"
+        android:paddingLeft="?android:attr/expandableListPreferredChildPaddingLeft"
+        android:textColor="#ededed"
+        android:textSize="17dp" />
 
 
-    </LinearLayout>
+</LinearLayout>
