--- a/app/src/main/res/layout/activity_buat_pesanan.xml
+++ b/app/src/main/res/layout/activity_buat_pesanan.xml
@@ -10,8 +10,9 @@
         android:id="@+id/pesanan"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="sans-serif-black"
         android:text="Order"
-        android:textColor="#232323"
+        android:textColor="#66BB6A"
         android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
