--- a/app/src/main/res/layout/activity_selesai_pesanan.xml
+++ b/app/src/main/res/layout/activity_selesai_pesanan.xml
@@ -77,7 +77,10 @@
         android:id="@+id/static_invoice"
         android:layout_width="95dp"
         android:layout_height="33dp"
+        android:background="#FFFFFF"
+        android:fontFamily="sans-serif-black"
         android:text="Invoice"
+        android:textColor="#66BB6A"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
