--- a/app/src/main/res/drawable/btn_border.xml
+++ b/app/src/main/res/drawable/btn_border.xml
@@ -3,8 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:shape="rectangle">
 
-    <solid android:color="#FFFFFF" />
-    <corners android:radius="5dp"/>
+    <solid android:color="#FAFAFA" />
+    <corners android:radius="7dp"/>
 
     <stroke
         android:width="2dp"
