--- a/app/src/main/res/drawable/btn_rounded_dark.xml
+++ b/app/src/main/res/drawable/btn_rounded_dark.xml
@@ -3,7 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:shape="rectangle">
 
-    <solid android:color="#4CAF50"/>
+    <solid android:color="#3D703F" />
     <corners android:radius="7dp"/>
+
 
 </shape>
